--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 		"dotenv": "^10.0.0",
 		"exifr": "^7.1.2",
 		"express": "^4.17.1",
-		"ffprobe": "^1.1.2",
 		"fluent-ffmpeg": "^2.1.2",
 		"google-auth-library": "^7.1.2",
+		"http-errors": "^1.7.2",
 		"ioredis": "^4.27.6",
 		"jimp": "^0.16.1",
 		"lodash": "^4.17.21",
@@ -32,5 +32,8 @@
 		"music-metadata": "^7.8.8",
 		"node-syncthing": "^3.3.7",
 		"patch-package": "^6.4.7"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.12"
 	}
 }
