--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"postinstall": "patch-package",
-		"run": "nodemon index.js"
+		"start": "node --trace-warnings index.js",
+		"dev": "nodemon --legacy-watch index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,19 +19,16 @@
 		"dotenv": "^10.0.0",
 		"exifr": "^7.1.2",
 		"express": "^4.17.1",
-		"fluent-ffmpeg": "^2.1.2",
 		"google-auth-library": "^7.1.2",
 		"http-errors": "^1.7.2",
 		"ioredis": "^4.27.6",
-		"jimp": "^0.16.1",
 		"lodash": "^4.17.21",
 		"md5-file": "^5.0.0",
+		"mediainfo.js": "^0.1.5",
 		"mongoose": "^5.13.0",
 		"mongoose-aggregate-paginate-v2": "^1.0.42",
 		"morgan": "^1.10.0",
-		"music-metadata": "^7.8.8",
-		"node-syncthing": "^3.3.7",
-		"patch-package": "^6.4.7"
+		"node-syncthing": "^3.3.7"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.12"
